--- a/sdk/package.json
+++ b/sdk/package.json
@@ -33,6 +33,7 @@
     "@solana/web3.js": "^1.98.4",
     "@types/bn.js": "^5.2.0",
     "assert": "^2.0.0",
+    "axios": "^1.12.2",
     "bn.js": "^5.2.2",
     "buffer": "6.0.3",
     "codama": "^1.3.7",
