fix gitignore mess

--- a/.gitignore
+++ b/.gitignore
@@ -2,19 +2,15 @@
 .anchor
 .DS_Store
 target
-KeyPairs
-*.json
-!sdk/package.json
-client/target
-**/*.rs.bk
-lib
+
 node_modules
-tests
 test-ledger
-.yarn*
-yarn.lock
-Makefile
-sdk/node_modules
-sdk/tools
+.yarn
+
+lib
+target
+**/*.rs.bk
+
+KeyPairs
 .keypair
 .env
