--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 mpl-token-metadata = { version = "5.1.0" }
 anchor-client = "0.31.1"
 anchor-lang = "0.31.1"
-raydium-amm-v3 = { path = "../programs/amm", features = [
+stabbleorg-clmm = { path = "../programs/clmm", features = [
     "no-entrypoint",
     "client",
 ] }
