--- a/sdk/package.json
+++ b/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stabbleorg/mclmm-sdk",
-  "version": "0.1.4",
+  "version": "0.1.7",
   "description": "SDK for Stabble's margin-enabled concentrated liquidity market maker",
   "main": "lib/index.js",
   "module": "lib/index.mjs",
@@ -30,7 +30,8 @@
     "build": "yarn build:js && yarn build:types",
     "generate-clients": "ts-node ./scripts/generate-clients.ts",
     "ts": "tsc --noEmit",
-    "prepare:canary": "yarn build && npm version --prerelease --preid=canary"
+    "prepare:canary": "yarn build && npm version --prerelease --preid=canary",
+    "prepublishOnly": "echo \"Building before publish!\" && yarn build"
   },
   "dependencies": {
     "@codama/nodes-from-anchor": "^1.2.9",
