--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "raydium-clmm",
+  "name": "stabble-mclmm",
   "version": "1.0.0",
-  "description": "Raydium-Amm-v3 is an open-sourced concentrated liquidity market maker (CLMM) program built for the Solana ecosystem.",
+  "description": "Forked from Raydium's AMM-v3",
   "main": "index.js",
   "scripts": {
     "cli": "npx ts-node --files cli",
