--- a/sdk/package.json
+++ b/sdk/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@codama/nodes-from-anchor": "^1.2.9",
     "@codama/renderers-js": "^1.4.2",
+    "@solana-program/system": "^0.9.0",
     "@solana-program/token": "^0.6.0",
     "@solana-program/token-2022": "^0.5.0",
     "@solana/kit": "^3.0.3",
